// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavList > renders a simple list 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1kphf_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="_ActionListItem_1kphf_20"
        data-active="true"
      >
        <a
          aria-current="page"
          aria-labelledby=":r1:--label  "
          class="_ActionListContent_1kphf_282 _Link_u1kmx_1"
          href="/"
          id=":r1:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="_Spacer_1kphf_297"
          />
          <span
            class="_ActionListSubContent_1kphf_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1kphf_188"
              id=":r1:--label"
            >
              Home
            </span>
            <span
              class="_InactiveWarning_1kphf_236"
            />
          </span>
        </a>
      </li>
      <li
        class="_ActionListItem_1kphf_20"
      >
        <a
          aria-labelledby=":r2:--label  "
          class="_ActionListContent_1kphf_282 _Link_u1kmx_1"
          href="/about"
          id=":r2:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="_Spacer_1kphf_297"
          />
          <span
            class="_ActionListSubContent_1kphf_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1kphf_188"
              id=":r2:--label"
            >
              About
            </span>
            <span
              class="_InactiveWarning_1kphf_236"
            />
          </span>
        </a>
      </li>
      <li
        class="_ActionListItem_1kphf_20"
      >
        <a
          aria-labelledby=":r3:--label  "
          class="_ActionListContent_1kphf_282 _Link_u1kmx_1"
          href="/contact"
          id=":r3:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="_Spacer_1kphf_297"
          />
          <span
            class="_ActionListSubContent_1kphf_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1kphf_188"
              id=":r3:--label"
            >
              Contact
            </span>
            <span
              class="_InactiveWarning_1kphf_236"
            />
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList > renders with groups 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1kphf_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        aria-hidden="true"
        class="_Divider_1kphf_73"
        data-component="ActionList.Divider"
      />
      <li
        class="_Group_1rejt_1"
      >
        <div
          class="_GroupHeadingWrap_1rejt_9"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="_GroupHeading_1rejt_7"
            data-component="ActionList.GroupHeading"
            id=":r5:"
          >
            Overview
          </h3>
        </div>
        <ul
          aria-labelledby=":r5:"
          class="_GroupList_1rejt_18"
        >
          <li
            class="_ActionListItem_1kphf_20"
            data-active="true"
          >
            <a
              aria-current="page"
              aria-labelledby=":r6:--label  "
              class="_ActionListContent_1kphf_282 _Link_u1kmx_1"
              href="/getting-started"
              id=":r6:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <span
                class="_Spacer_1kphf_297"
              />
              <span
                class="_ActionListSubContent_1kphf_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1kphf_188"
                  id=":r6:--label"
                >
                  Getting started
                </span>
                <span
                  class="_InactiveWarning_1kphf_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="_Divider_1kphf_73"
        data-component="ActionList.Divider"
      />
      <li
        class="_Group_1rejt_1"
      >
        <div
          class="_GroupHeadingWrap_1rejt_9"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="_GroupHeading_1rejt_7"
            data-component="ActionList.GroupHeading"
            id=":r7:"
          >
            Components
          </h3>
        </div>
        <ul
          aria-labelledby=":r7:"
          class="_GroupList_1rejt_18"
        >
          <li
            class="_ActionListItem_1kphf_20"
          >
            <a
              aria-labelledby=":r8:--label  "
              class="_ActionListContent_1kphf_282 _Link_u1kmx_1"
              href="/Avatar"
              id=":r8:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <span
                class="_Spacer_1kphf_297"
              />
              <span
                class="_ActionListSubContent_1kphf_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1kphf_188"
                  id=":r8:--label"
                >
                  Avatar
                </span>
                <span
                  class="_InactiveWarning_1kphf_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav > does not have active styles if SubNav contains the current item and is open 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1kphf_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="_ActionListItem_1kphf_20"
        data-has-subitem="true"
      >
        <button
          aria-controls=":r23:"
          aria-expanded="true"
          aria-labelledby=":r22:--label :r22:--trailing-visual "
          class="_ActionListContent_1kphf_282"
          id=":r22:"
          style="--subitem-depth: 0;"
          tabindex="0"
          type="button"
        >
          <span
            class="_Spacer_1kphf_297"
          />
          <span
            class="_ActionListSubContent_1kphf_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1kphf_188"
              id=":r22:--label"
            >
              Item
            </span>
            <span
              class="_TrailingVisual_1kphf_158 _VisualWrap_1kphf_615"
              id=":r22:--trailing-visual"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down _ExpandIcon_1kphf_484"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </span>
            <span
              class="_InactiveWarning_1kphf_236"
            />
          </span>
        </button>
        <ul
          aria-labelledby=":r22:"
          class="_SubGroup_1kphf_494"
          id=":r23:"
        >
          <li
            class="_ActionListItem_1kphf_20"
            data-active="true"
          >
            <a
              aria-current="page"
              aria-labelledby=":r25:--label  "
              class="_ActionListContent_1kphf_282 _Link_u1kmx_1"
              href="#"
              id=":r25:"
              style="--subitem-depth: 1;"
              tabindex="0"
            >
              <span
                class="_Spacer_1kphf_297"
              />
              <span
                class="_ActionListSubContent_1kphf_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1kphf_188"
                  id=":r25:--label"
                >
                  Sub Item
                </span>
                <span
                  class="_InactiveWarning_1kphf_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav > has active styles if SubNav contains the current item and is closed 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1kphf_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="_ActionListItem_1kphf_20"
        data-active="true"
        data-has-subitem="true"
      >
        <button
          aria-controls=":r1u:"
          aria-expanded="false"
          aria-labelledby=":r1t:--label :r1t:--trailing-visual "
          class="_ActionListContent_1kphf_282"
          id=":r1t:"
          style="--subitem-depth: 0;"
          tabindex="0"
          type="button"
        >
          <span
            class="_Spacer_1kphf_297"
          />
          <span
            class="_ActionListSubContent_1kphf_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1kphf_188"
              id=":r1t:--label"
            >
              Item
            </span>
            <span
              class="_TrailingVisual_1kphf_158 _VisualWrap_1kphf_615"
              id=":r1t:--trailing-visual"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down _ExpandIcon_1kphf_484"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </span>
            <span
              class="_InactiveWarning_1kphf_236"
            />
          </span>
        </button>
        <ul
          aria-labelledby=":r1t:"
          class="_SubGroup_1kphf_494"
          id=":r1u:"
        >
          <li
            class="_ActionListItem_1kphf_20"
            data-active="true"
          >
            <a
              aria-current="page"
              aria-labelledby=":r20:--label  "
              class="_ActionListContent_1kphf_282 _Link_u1kmx_1"
              href="#"
              id=":r20:"
              style="--subitem-depth: 1;"
              tabindex="0"
            >
              <span
                class="_Spacer_1kphf_297"
              />
              <span
                class="_ActionListSubContent_1kphf_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1kphf_188"
                  id=":r20:--label"
                >
                  Sub Item
                </span>
                <span
                  class="_InactiveWarning_1kphf_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;
